Fixed map not showing after changing views

--- a/rum/www/css/style.css
+++ b/rum/www/css/style.css
@@ -123,7 +123,7 @@ ion-side-menu ion-item {
 	height:100%;
 }
 
-#map-canvas {
+.map-container {
 	width:100%;
 	height:100%;
 }
